--- a/styles.scss
+++ b/styles.scss
@@ -73,7 +73,8 @@ ul {
   height: 72em;
   padding: 0 $padding;
 
-  background-image: url("munich.jpg");
+  background-image: url("munich-color-3.jpg");
+  background-position: -100px 0;
   background-repeat: no-repeat;
 
   //  background-color: red;
