--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ ul {
   position: relative;
   height: 72em;
   padding: 0 40px;
-  background-image: url("munich-color-3.jpg");
+  background-image: url("munich.jpg");
   background-position: -100px 0;
   background-repeat: no-repeat; }
   #splash #statement {
