--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,17 @@ ul {
   ul li {
     display: inline-block; }
 
+a {
+  color: black;
+  text-decoration: none;
+  border-bottom: 1px black dotted; }
+
 .important-info {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold; }
+
+a.map {
+  border: none; }
 
 #container {
   width: 1024px;
@@ -63,7 +71,7 @@ ul {
   #description a {
     color: black;
     text-decoration: none;
-    border-bottom: 1px gray solid; }
+    border-bottom: 1px gray dotted; }
   #description p {
     font-size: 2.4em;
     line-height: 1.5em;
