--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ a.icon-link {
     color: black;
     text-decoration: none;
     border-bottom: 1px gray dotted; }
+  #description a.icon-link {
+    border: none; }
   #description p {
     font-size: 2.4em;
     line-height: 1.5em;
