move resources to rsrc folder

--- a/styles.scss
+++ b/styles.scss
@@ -83,7 +83,7 @@ a.icon-link {
   height: 72em;
   padding: 0 $padding;
 
-  background-image: url("munich.jpg");
+  background-image: url("rsrc/munich.jpg");
   background-position: -100px 0;
   background-repeat: no-repeat;
 
