--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ a.icon-link {
   position: relative;
   height: 72em;
   padding: 0 40px;
-  background-image: url("munich.jpg");
+  background-image: url("rsrc/munich.jpg");
   background-position: -100px 0;
   background-repeat: no-repeat; }
   #splash #statement {
